Added info to README.md

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ build/
 gradle-app.setting
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+/.idea
 !gradle-wrapper.jar
 bin/
 .classpath
